# pico_extra_libraries

./: LICENSE  README.md
dsp-test/: CMakeLists.txt  dsp-test.c
freertos-test/: CMakeLists.txt  freertos-test.c  library.cmake
nn-test/: CMakeLists.txt  nn-test.c
tflite-test/: CMakeLists.txt  tflite-test.cpp
